# Abundroid

./: .env.example  .gitignore  README.md  pyproject.toml
data/: organizations.csv  sources.csv  topics.csv
docs/: EVENTS-TO-ITEMS-MIGRATION-PLAN.md  IMPLEMENTATION_PLAN.md  OFFLINE-OPERATIONS-STABILITY-PLAN.md  PHASE2-STABILIZATION-PLAN.md  ROADMAP.md  SETUP.md  airtable-schema.md  example-feeds.md
docs/superpowers/: ical-adapter-handoff.md
docs/superpowers/plans/: 2026-07-15-setup-command.md  2026-07-17-ical-adapter.md
docs/superpowers/specs/: 2026-07-15-abundroid-setup-command-design.md  2026-07-17-ical-adapter-design.md
src/abundroid/: __init__.py  airtable_schema.py  classifier.py  cli.py  dedupe.py  event_migration.py  fetch.py  item_dedupe.py  item_pipeline.py  item_uid.py  models.py  pipeline.py  setup_base.py  uid.py
src/abundroid/adapters/: ical.py  jsonld.py  (+1 more)
tests/: test_airtable_schema.py  test_airtable_store.py  test_classifier.py  test_cli.py  test_cli_setup.py  test_csv_store.py  test_dedupe.py  test_event_migration.py  test_ical_adapter.py  test_ical_live.py  test_item_airtable_store.py  test_item_cli.py  test_item_csv_store.py  test_item_dedupe.py  test_item_models.py  test_item_pipeline.py  test_item_source_safety.py  test_item_uid.py  test_jsonld_adapter.py  test_migration_cli.py  test_pipeline.py  test_rss_adapter.py  test_rss_items.py  test_setup_base.py  test_setup_live.py  test_source_run_airtable_store.py  test_source_run_csv_store.py  test_source_runs.py  test_uid.py
tests/fixtures/: sample.ics  sample_jsonld.html  sample_rss.xml
(+6 files in other folders)
